--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+<input type="radio" name="section" id="radio-section-0" checked />
+<input type="radio" name="section" id="radio-section-1" />
+<input type="radio" name="section" id="radio-section-2" />
+
+<section id="section-0">
+    <h2><label for="radio-section-0">Introduction</label></h2>
+    <div>
+        Content for the introduction.
+    </div>
+</section>
+<section id="section-1">
+    <h2><label for="radio-section-1">Previous Experience</label></h2>
+    <div>
+        Content for the Previous Experiences.
+    </div>
+</section>
+<section id="section-2">
+    <h2><label for="radio-section-2">Side Projects</label></h2>
+    <div>
+        Content for the side projects.
+    </div>
+</section>
+
+
     
 </body>
 </html>
