--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Resume Sample</title>
+    <title>Joan Marie Verba's Resume</title>
+    <meta author="Joan Marie Verba">
+    <meta name="keywords" content="Joan Marie Verba,resume,curriculum vitae,cv" />
+    <meta name="description" content="Joan Marie Verba's Interactive Resume" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
