--- a/index.html
+++ b/index.html
@@ -18,10 +18,23 @@
 <input type="radio" name="section" id="radio-section-2" />
 
 <section id="section-0">
-    <h2><label for="radio-section-0">Introduction</label></h2>
-    <div>
-        Content for the introduction.
-    </div>
+    <h2><label for="radio-section-0">Joan Marie Verba</label></h2>
+
+    <h2>Candidate</h2>
+    <p>
+        Name: <span>Joan Marie Verba</span>
+    </p>
+    <p>
+        Email: <span>verba001@umn.edu</span>
+    </p>
+    <p>
+        Website: <a href="http://joanmarieverba.co.technology/frontend">http://joanmarieverba.co.technology/frontend</a>
+    </p>
+    <p>
+        Joan is a <span>Front End Web Developer</span>
+        who enjoys <span>HTML, CSS (plus Bootstrap), and JavaScript (plus jQuery)</span>.
+    </p>
+
 </section>
 <section id="section-1">
     <h2><label for="radio-section-1">Previous Experience</label></h2>
