--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta author="Joan Marie Verba">
     <meta name="keywords" content="Joan Marie Verba,resume,curriculum vitae,cv" />
     <meta name="description" content="Joan Marie Verba's Interactive Resume" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,8 +20,6 @@
 
 <section id="section-0">
     <h2><label for="radio-section-0">Joan Marie Verba</label></h2>
-
-    <h2>Candidate</h2>
     <p>
         Name: <span>Joan Marie Verba</span>
     </p>
