--- a/index.html
+++ b/index.html
@@ -14,42 +14,304 @@
 <body>
 
 
-<input type="radio" name="section" id="radio-section-0" checked />
-<input type="radio" name="section" id="radio-section-1" />
-<input type="radio" name="section" id="radio-section-2" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-0" checked />
+<input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-1" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-2" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-3" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-4" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-5" />
 
-
-    <section itemscope itemtype="http://schema.org/Person">
-        <h2>Candidate</h2>
-        <p>
-            Name: <span itemprop="name">Joan Marie Verba</span>
-        </p>
-        <p>
-            Email: <span itemprop="email">verba001@umn.edu</span>
-        </p>
-        <p>
-            Website: <a itemprop="url" href="http://joanmarieverba.co.technology/frontend">http://joanmarieverba.co.technology/frontend</a>
-        </p>
-        <p>
-            Joan is a <span>Front End Web Developer</span>
-            who enjoys <span>HTML, CSS (plus Bootstrap), and JavaScript (plus jQuery)</span>.
-        </p>
-    </section>
-
-<section id="section-1">
-    <h2><label for="radio-section-1">Previous Experience</label></h2>
+<input aria-hidden="true" tabindex="-1" type="radio" name="work" id="work-0" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="work" id="work-1" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="work" id="work-2" />
+<input aria-hidden="true" tabindex="-1" type="radio" name="work" id="work-3" />
+<main id="resume" itemscope itemtype="http://schema.org/Person">
     <div>
-        Content for the Previous Experiences.
+        <header>
+            <h1 itemprop="name"><label for="section-0">Alvaro Montoro</label></h1>
+            <p id="objective" itemprop="description">
+                <span itemprop="jobTitle">Senior Software Engineer</span> with
+                strong experience creating
+                <span itemprop="knowsAbout">high-quality, scalable, and high-performance web
+                    applications</span>
+                seeking
+                <span itemprop="seeks">front-end and full stack opportunities</span>.
+            </p>
+            <address id="contact-mini">
+                <div itemprop="email">
+                    <a href="mailto:alvaromontoro@gmail.com">alvaromontoro@gmail.com</a>
+                </div>
+                <a href="tel:+19174055831"><span itemprop="telephone">(917) 405-5831</span></a>
+                <div>
+                    <a rel="external author" href="http://alvaromontoro.com" itemprop="url">alvaromontoro.com</a>
+                </div>
+            </address>
+        </header>
+
+        <section id="professional-experience">
+            <h2><label for="section-1">Experience</label></h2>
+            <div id="experience-container">
+                <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
+                    class="position reactjs html css javascript kotlin a11y less api">
+                    <h3>
+                        <span itemprop="name">athenahealth</span>
+                        <span class="dept" itemprop="department">Healthcare IT</span>
+                    </h3>
+                    <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
+                        <span itemprop="roleName">Member of Technical Staff</span>
+                        <span class="dates">
+                            <time itemprop="startDate">2017</time>
+                            -
+                            <time></time>
+                        </span>
+                    </h4>
+                    <ul itemprop="description">
+                        <li>
+                            Developed widgets using React and Less to display patient
+                            information.
+                        </li>
+                        <li>
+                            Created design specifications, participated in design and code
+                            reviews.
+                        </li>
+                        <li>
+                            Worked on the design and initial development of a new platform
+                            to import medical documents.
+                        </li>
+                        <li>
+                            Developed a Kotlin micro-service to generate XML documents
+                            based on a government-compliant architecture (CCDA).
+                        </li>
+                    </ul>
+                    <label for="work-1" class="next">
+                        &#8250; <span>Next job experience</span>
+                    </label>
+                </section>
+
+                <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
+                    class="position java javascript html css jquery cq5 aem seo a11y mobile sass">
+                    <h3>
+                        <span itemprop="name">General Motors</span>
+                        <span class="dept" itemprop="department">Cadillac.Com Team</span>
+                    </h3>
+                    <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
+                        <span itemprop="roleName">Web Developer</span>
+                        <span class="dates">
+                            <time itemprop="startDate">2015</time>
+                            -
+                            <time itemprop="endDate">2017</time>
+                        </span>
+                    </h4>
+                    <ul itemprop="description">
+                        <li>
+                            Developed new components for the award-winning website
+                            Cadillac.com and its mobile version.
+                        </li>
+                        <li>
+                            Worked with stakeholders to refine and negotiate product
+                            requirement specifications, functional specifications, and
+                            product vision and direction.
+                        </li>
+                        <li>
+                            Designed a web component that reduced page load speed by over
+                            15%, improving SEO and accessibility, and saving authoring
+                            expenses.
+                        </li>
+                        <li>
+                            Organized and participated in events representing GM at
+                            volunteering opportunities and competitions.
+                        </li>
+                    </ul>
+                    <label for="work-0" class="prev">
+                        &#8249; <span>Previous job experience</span>
+                    </label>
+                    <label for="work-2" class="next">
+                        &#8250; <span>Next job experience</span>
+                    </label>
+                </section>
+
+                <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
+                    class="position php csharp mysql html javascript css jquery sqlserver sql a11y sass mobile api">
+                    <h3>
+                        <span itemprop="name">MicroAssist</span>
+                        <span class="dept" itemprop="department">Information Technology and Services</span>
+                    </h3>
+                    <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
+                        <span itemprop="roleName">PHP Developer</span>
+                        <span class="dates">
+                            <time itemprop="startDate">2014</time>
+                            -
+                            <time itemprop="endDate">2015</time>
+                        </span>
+                    </h4>
+                    <ul itemprop="description">
+                        <li>
+                            Designed and developed different web projects with a focus on
+                            accessibility, including new features and website
+                            enhancements.
+                        </li>
+                        <li>
+                            Created and integrated an automated mail system with 3rd party
+                            APIs.
+                        </li>
+                        <li>
+                            Developed and collaborated in the translation project of the
+                            ITTD website for the Texas Department of Public Safety.
+                        </li>
+                    </ul>
+                    <label for="work-1" class="prev">
+                        &#8249; <span>Previous job experience</span>
+                    </label>
+                    <label for="work-3" class="next">
+                        &#8250; <span>Next job experience</span>
+                    </label>
+                </section>
+
+                <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
+                    class="position html javascript css jquery sqlserver sql csharp api">
+                    <h3>
+                        <span itemprop="name">Hewlett-Packard</span>
+                        <span class="dept" itemprop="department">Content & Digital Asset Management</span>
+                    </h3>
+                    <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
+                        <span itemprop="roleName">IT Engineer</span>
+                        <span class="dates">
+                            <time itemprop="startDate">2011</time>
+                            -
+                            <time itemprop="endDate">2014</time>
+                        </span>
+                    </h4>
+                    <ul itemprop="description">
+                        <li>
+                            Developed two internal content management systems (related to
+                            HP’s products documentation) with over three million monthly
+                            visitors.
+                        </li>
+                        <li>
+                            Coordinated efforts with an overseas team, applying Agile
+                            methodologies to ensure on-time, on-spec project delivery.
+                        </li>
+                        <li>
+                            Improved different batch jobs performance, reducing execution
+                            time by over 50%, and eliminating downtime.
+                        </li>
+                    </ul>
+                    <label for="work-2" class="prev">
+                        &#8249; <span>Previous job experience</span>
+                    </label>
+                </section>
+            </div>
+        </section>
     </div>
-</section>
-<section id="section-2">
-    <h2><label for="radio-section-2">Side Projects</label></h2>
     <div>
-        Content for the side projects.
+        <address id="contact" class="contact-2">
+            <div id="location" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                <span itemprop="addressLocality">Austin</span>,
+                <span itemprop="addressRegion">TX</span>
+            </div>
+            <a href="tel:+19174055831" id="phone">(917) 405-5831</a>
+            <div>
+                <a href="mailto:alvaromontoro@gmail.com" id="email">alvaromontoro@gmail.com</a>
+            </div>
+            <div>
+                <a href="http://alvaromontoro.com" id="website">alvaromontoro.com</a>
+            </div>
+        </address>
+
+        <section>
+            <h2><label for="section-2">Programming Languages</label></h2>
+            <ul class="no-bullets" id="languages">
+                <li itemprop="knowsAbout">JavaScript</li>
+                <li itemprop="knowsAbout">HTML</li>
+                <li itemprop="knowsAbout">CSS</li>
+                <li itemprop="knowsAbout">Java</li>
+                <li itemprop="knowsAbout">Kotlin</li>
+                <li itemprop="knowsAbout">C#</li>
+                <li itemprop="knowsAbout">PHP</li>
+                <li itemprop="knowsAbout">SQL</li>
+                <li itemprop="knowsAbout">TypeScript</li>
+                <li itemprop="knowsAbout">XML</li>
+                <li itemprop="knowsAbout">C</li>
+                <li itemprop="knowsAbout">C++</li>
+                <li itemprop="knowsAbout">Python</li>
+                <li itemprop="knowsAbout">Perl</li>
+                <li itemprop="knowsAbout">VB.Net</li>
+            </ul>
+        </section>
+
+        <section id="edu-certs">
+            <h2><label for="section-3">Education and Certifications</label></h2>
+            <ul class="no-bullets educert">
+                <li itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
+                    <span itemprop="name">University of Jaen</span>
+                    <ul>
+                        <li itemprop="award">B.S. Computer Science</li>
+                        <li itemprop="award">M.S. Computer Science</li>
+                    </ul>
+                </li>
+                <li itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
+                    <span itemprop="name">Scrum Alliance</span>
+                    <ul>
+                        <li itemprop="award">Certified ScrumMaster</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section id="volunteering">
+            <h2><label for="section-4">Volunteering</label></h2>
+            <ul class="no-bullets">
+                <li>
+                    <span>Stack Overflow</span>
+                    <ul>
+                        <li>
+                            Moderator of SOes<br />
+                            <span>
+                                <time>2017</time>
+                                - PRESENT
+                            </span>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <span>General Motors</span>
+                    <ul>
+                        <li>
+                            A World in Motion<br />
+                            <span>
+                                <time>2015</time>
+                                -
+                                <time>2017</time>
+                            </span>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <section id="additional-links">
+            <h2><label for="section-5">Additional Links</label></h2>
+            <ul class="no-bullets educert">
+                <li>
+                    <a rel="external author" href="https://stackoverflow.com/users/3695983/alvaro-montoro">Stack
+                        Overflow</a>
+                    <ul>
+                        <li>Top 1%: HTML, CSS</li>
+                        <li>Top 5%: JavaScript</li>
+                    </ul>
+                </li>
+                <li>
+                    <a rel="external author" href="https://es.stackoverflow.com/users/250/alvaro-montoro">Stack Overflow
+                        ES</a>
+                </li>
+                <li>
+                    <a rel="external author" href="https://codepen.io/alvaromontoro/">CodePen Profile</a>
+                    <div class="normal">Featured web snippets</div>
+                </li>
+            </ul>
+        </section>
     </div>
-</section>
-
-
+</main>
     
 </body>
 </html>
