--- a/index.html
+++ b/index.html
@@ -28,22 +28,21 @@
 <main id="resume" itemscope itemtype="http://schema.org/Person">
     <div>
         <header>
-            <h1 itemprop="name"><label for="section-0">Alvaro Montoro</label></h1>
+            <h1 itemprop="name"><label for="section-0">Joan Marie Verba</label></h1>
             <p id="objective" itemprop="description">
-                <span itemprop="jobTitle">Senior Software Engineer</span> with
+                <span itemprop="jobTitle">Front End Web Developer</span> with
                 strong experience creating
                 <span itemprop="knowsAbout">high-quality, scalable, and high-performance web
-                    applications</span>
-                seeking
-                <span itemprop="seeks">front-end and full stack opportunities</span>.
+                    pages</span> seeking
+                <span itemprop="seeks">front-end opportunities</span>.
             </p>
             <address id="contact-mini">
                 <div itemprop="email">
-                    <a href="mailto:alvaromontoro@gmail.com">alvaromontoro@gmail.com</a>
+                    <a href="mailto:alvaromontoro@gmail.com">verba001@umn.edu</a>
                 </div>
-                <a href="tel:+19174055831"><span itemprop="telephone">(917) 405-5831</span></a>
+                <a href="tel:+17635887640"><span itemprop="telephone">763-588-7640</span></a>
                 <div>
-                    <a rel="external author" href="http://alvaromontoro.com" itemprop="url">alvaromontoro.com</a>
+                    <a rel="external author" href="http://joanmarieverba.co.technology/frontend" itemprop="url">joanmarieverba.co.technology/frontend</a>
                 </div>
             </address>
         </header>
@@ -54,34 +53,25 @@
                 <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
                     class="position reactjs html css javascript kotlin a11y less api">
                     <h3>
-                        <span itemprop="name">athenahealth</span>
+                        <span itemprop="name">Websites, Social Media, & More by Joan Marie Verba</span>
                         <span class="dept" itemprop="department">Healthcare IT</span>
                     </h3>
                     <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
-                        <span itemprop="roleName">Member of Technical Staff</span>
+                        <span itemprop="roleName">Web Developer, Social Media Manager</span>
                         <span class="dates">
-                            <time itemprop="startDate">2017</time>
+                            <time itemprop="startDate">2010</time>
                             -
                             <time></time>
                         </span>
                     </h4>
                     <ul itemprop="description">
                         <li>
-                            Developed widgets using React and Less to display patient
-                            information.
+                            Developed websites using HTML, CSS, JavaScript and/or Wordpress
                         </li>
                         <li>
-                            Created design specifications, participated in design and code
-                            reviews.
+                            Managed social media for clients
                         </li>
-                        <li>
-                            Worked on the design and initial development of a new platform
-                            to import medical documents.
-                        </li>
-                        <li>
-                            Developed a Kotlin micro-service to generate XML documents
-                            based on a government-compliant architecture (CCDA).
-                        </li>
+
                     </ul>
                     <label for="work-1" class="next">
                         &#8250; <span>Next job experience</span>
@@ -91,36 +81,27 @@
                 <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
                     class="position java javascript html css jquery cq5 aem seo a11y mobile sass">
                     <h3>
-                        <span itemprop="name">General Motors</span>
-                        <span class="dept" itemprop="department">Cadillac.Com Team</span>
+                        <span itemprop="name">FTL Publications</span>
+                        <span class="dept" itemprop="department">Publisher</span>
                     </h3>
                     <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
                         <span itemprop="roleName">Web Developer</span>
                         <span class="dates">
-                            <time itemprop="startDate">2015</time>
+                            <time itemprop="startDate">1994</time>
                             -
-                            <time itemprop="endDate">2017</time>
+                            <time itemprop="endDate"> </time>
                         </span>
                     </h4>
                     <ul itemprop="description">
                         <li>
-                            Developed new components for the award-winning website
-                            Cadillac.com and its mobile version.
+                            Formatted paperbacks in InDesign (full cover and interior), and formatted ebooks for publication. 
                         </li>
                         <li>
-                            Worked with stakeholders to refine and negotiate product
-                            requirement specifications, functional specifications, and
-                            product vision and direction.
+                            Titles have been
+                            recipients of the Mom's Choice Award, the Scribe Award, the EPIC Award, and the Midwest Book Award.
                         </li>
-                        <li>
-                            Designed a web component that reduced page load speed by over
-                            15%, improving SEO and accessibility, and saving authoring
-                            expenses.
-                        </li>
-                        <li>
-                            Organized and participated in events representing GM at
-                            volunteering opportunities and competitions.
-                        </li>
+   
+       
                     </ul>
                     <label for="work-0" class="prev">
                         &#8249; <span>Previous job experience</span>
