--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <span itemprop="seeks">front-end opportunities</span>.
             </p>
             <address id="contact-mini">
+                <div id="location" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress" style="text-align: center;">
+                    <span itemprop="addressLocality">Minneapolis</span>,
+                    <span itemprop="addressRegion">MN</span>
+                </div>
                 <div itemprop="email">
                     <a href="mailto:alvaromontoro@gmail.com">verba001@umn.edu</a>
                 </div>
@@ -114,31 +118,25 @@
                 <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
                     class="position php csharp mysql html javascript css jquery sqlserver sql a11y sass mobile api">
                     <h3>
-                        <span itemprop="name">MicroAssist</span>
-                        <span class="dept" itemprop="department">Information Technology and Services</span>
+                        <span itemprop="name">Accenture</span>
+                        <span class="dept" itemprop="department">Application Development Associate</span>
                     </h3>
                     <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
-                        <span itemprop="roleName">PHP Developer</span>
+                        <span itemprop="roleName">Application Development Associate</span>
                         <span class="dates">
-                            <time itemprop="startDate">2014</time>
+                            <time itemprop="startDate">2017</time>
                             -
-                            <time itemprop="endDate">2015</time>
+                            <time itemprop="endDate">2018</time>
                         </span>
                     </h4>
                     <ul itemprop="description">
                         <li>
-                            Designed and developed different web projects with a focus on
-                            accessibility, including new features and website
-                            enhancements.
+                            Used Sharepoint and Excel. 
                         </li>
                         <li>
-                            Created and integrated an automated mail system with 3rd party
-                            APIs.
+                            Volunteered to speak about the process of finding a job to students participating in Junior Achievement.
                         </li>
-                        <li>
-                            Developed and collaborated in the translation project of the
-                            ITTD website for the Texas Department of Public Safety.
-                        </li>
+
                     </ul>
                     <label for="work-1" class="prev">
                         &#8249; <span>Previous job experience</span>
@@ -151,30 +149,28 @@
                 <section itemprop="memberOf" itemscope itemtype="http://schema.org/Organization"
                     class="position html javascript css jquery sqlserver sql csharp api">
                     <h3>
-                        <span itemprop="name">Hewlett-Packard</span>
-                        <span class="dept" itemprop="department">Content & Digital Asset Management</span>
+                        <span itemprop="name">Weight Watchers</span>
+                        <span class="dept" itemprop="department"></span>
                     </h3>
                     <h4 itemprop="member" itemscope itemtype="http://schema.org/OrganizationRole">
-                        <span itemprop="roleName">IT Engineer</span>
+                        <span itemprop="roleName">Leader and Receptionist</span>
                         <span class="dates">
-                            <time itemprop="startDate">2011</time>
+                            <time itemprop="startDate">200</time>
                             -
-                            <time itemprop="endDate">2014</time>
+                            <time itemprop="endDate">2009</time>
                         </span>
                     </h4>
                     <ul itemprop="description">
                         <li>
-                            Developed two internal content management systems (related to
-                            HP’s products documentation) with over three million monthly
-                            visitors.
+                            Responsibilities incliuded running the meeting, giving the weekly presentation, counseling members, greeting and weighing members, maintaining
+                            records, doing bookkeeping for each meeting
                         </li>
                         <li>
-                            Coordinated efforts with an overseas team, applying Agile
-                            methodologies to ensure on-time, on-spec project delivery.
+                            Received awards for most at-work meetings as a receptionist, and for the number of meetings where I filled in for other
+                            leaders who were ill or on vacation.
                         </li>
                         <li>
-                            Improved different batch jobs performance, reducing execution
-                            time by over 50%, and eliminating downtime.
+                            Guided several members to lifetime status.
                         </li>
                     </ul>
                     <label for="work-2" class="prev">
@@ -186,10 +182,7 @@
     </div>
     <div>
         <address id="contact" class="contact-2">
-            <div id="location" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                <span itemprop="addressLocality">Austin</span>,
-                <span itemprop="addressRegion">TX</span>
-            </div>
+
             <a href="tel:+19174055831" id="phone">(917) 405-5831</a>
             <div>
                 <a href="mailto:alvaromontoro@gmail.com" id="email">alvaromontoro@gmail.com</a>
