--- a/index.html
+++ b/index.html
@@ -221,16 +221,16 @@
             <h2><label for="section-3">Education and Certifications</label></h2>
             <ul class="no-bullets educert">
                 <li itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
-                    <span itemprop="name">University of Jaen</span>
+                    <span itemprop="name">UNIVERSITY OF MINNESOTA CODING BOOT CAMP</span>
                     <ul>
-                        <li itemprop="award">B.S. Computer Science</li>
-                        <li itemprop="award">M.S. Computer Science</li>
+                        <li itemprop="award">Full Stack Web Development</li>
+    
                     </ul>
                 </li>
                 <li itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
-                    <span itemprop="name">Scrum Alliance</span>
+                    <span itemprop="name">THE IRON YARD</span>
                     <ul>
-                        <li itemprop="award">Certified ScrumMaster</li>
+                        <li itemprop="award">Front End Engineering</li>
                     </ul>
                 </li>
             </ul>
