--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+<!-- from: https://dev.to/alvaromontoro/developing-an-interactive-resume-with-html-and-css-5007?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign= -->
 
 <input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-0" checked />
 <input aria-hidden="true" tabindex="-1" type="radio" name="section" id="section-1" />
@@ -237,29 +238,29 @@
         </section>
 
         <section id="volunteering">
-            <h2><label for="section-4">Volunteering</label></h2>
+            <h2><label for="section-4">Interests</label></h2>
             <ul class="no-bullets">
                 <li>
-                    <span>Stack Overflow</span>
+                    <span>Minnesota Science Fiction Society</span>
                     <ul>
                         <li>
-                            Moderator of SOes<br />
+                            Board of Diectors<br />
                             <span>
-                                <time>2017</time>
-                                - PRESENT
+                                <time>one term</time>
+                                
                             </span>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <span>General Motors</span>
+                    <span>Mythopoeic Society</span>
                     <ul>
                         <li>
-                            A World in Motion<br />
+                            Secretary of the Mythopoeic Press <br />
                             <span>
-                                <time>2015</time>
+                                <time>1997</time>
                                 -
-                                <time>2017</time>
+                                <time>2002</time>
                             </span>
                         </li>
                     </ul>
@@ -271,8 +272,7 @@
             <h2><label for="section-5">Additional Links</label></h2>
             <ul class="no-bullets educert">
                 <li>
-                    <a rel="external author" href="https://stackoverflow.com/users/3695983/alvaro-montoro">Stack
-                        Overflow</a>
+                    <a href="https://www.linkedin.com/in/joan-marie-verba/">LinkedIn</a>
                     <ul>
                         <li>Top 1%: HTML, CSS</li>
                         <li>Top 5%: JavaScript</li>
