--- a/index.html
+++ b/index.html
@@ -272,19 +272,21 @@
             <h2><label for="section-5">Additional Links</label></h2>
             <ul class="no-bullets educert">
                 <li>
+                    <a href="https://github.com/joanmarieverba">GitHub</a>
+                </li>
+                <li>
+                    <a href="http://joanmarieverba.co.technology/frontend">Portfolio</a>
+                </li>
+                <li>
                     <a href="https://www.linkedin.com/in/joan-marie-verba/">LinkedIn</a>
-                    <ul>
-                        <li>Top 1%: HTML, CSS</li>
-                        <li>Top 5%: JavaScript</li>
-                    </ul>
+  
                 </li>
                 <li>
-                    <a rel="external author" href="https://es.stackoverflow.com/users/250/alvaro-montoro">Stack Overflow
-                        ES</a>
+                    <a href="https://twitter.com/joanmarieverba">Twitter</a>
                 </li>
                 <li>
-                    <a rel="external author" href="https://codepen.io/alvaromontoro/">CodePen Profile</a>
-                    <div class="normal">Featured web snippets</div>
+                    <a href="https://facebook.com/joanmarieverba">Facebook</a>
+                 
                 </li>
             </ul>
         </section>
